--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <script src="/js/jquery.fancybox.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
-<div class="polaris-footer">
-    <span>@ 2022 The PolarisMesh Authors</span>
+<div class="macula-footer">
+    <span>@ 2023 The Macula Authors</span>
     <span class="high-resolution">|</span>
-    <span>A Tencent Microservice Project</span>
+    <span>A Macula Microservice Project</span>
     <a href="https://beian.miit.gov.cn/#/Integrated/index">粤B2-20090059 </a>
-    <div class="polaris-footer-background"></div>
+    <div class="macula-footer-background"></div>
 </div>
